# uipath-react-agent

./: agent.mermaid  main.py  pyproject.toml  uipath.json
.uipath/: .auth.json  .error_log  custom-agent-v2.0.0.2.nupkg  custom-agent.0.0.1.nupkg
__uipath/: state.db
