[project]
name = "custom-agent-v2"
version = "0.0.2"
description = "custom-agent updated"
authors = [{ name = "James Dickson", email = "james.dickson@uipath.com" }]
dependencies = [
    "uipath-langchain>=0.0.106",
    "langchain-anthropic>=0.3.8",
    "langgraph>=0.4.3",
]
requires-python = ">=3.10"
